2017-12-07  JMB  Calculation editor layout fixes

    Fixed the layout on Android for the dialogs to define and edit calculation
    columns.  Also fixed the refresh button on calculation fields in the row
    viewer to be an appropriate width.

2017-12-03  JMB  Option to include enums in "Any text column" conditions

    There is now a checkbox in the "General" preferences tab to include
    enums as well as string and note fields in "Any text column" filter
    conditions.  The default behavior is as before (enums excluded).

2017-04-06  JMB  More translation updates

    Updated assorted translation files, mainly due to a few text changes
    in the help files to reflect recent changes.

2017-04-04  JMB  Fixed code signing for Mac releases

    Updated the code signing for Mac OS X to work with the current app
    bundle content.  Producing a signed binary that Sierra respects requires
    it to be signed on OS X 10.11.5 or above.  This should fix the
    "unidentified developer" warnings that people have started seeing with
    the previous PortaBase release on newer OS versions.

2017-04-02  JMB  Release preparation and assorted bugfixes

    * Added the latest Italian translation updates.
    * Fixed a rather long-standing bug where the view editor failed to save
      which columns are to be included when first creating a new view.
    * Removed the top padding for dynamic-height text fields on Android to
      fully fix the cursor alignment problem.
    * Fixed the spacing on the popup menu for the column statistics dialog's
      column listing.
    * Updated the help file translation templates
    * Reverted a change in QQMenuHelper that broke compatibility with Qt 4.5
      (still needed for the Maemo releases)
    * Updated assorted Maemo packaging files for the upcoming 2.2 release

2017-03-30  JMB  Update UI translations, fix them on Android, new help theme

    Updated the UI translation files, and fixed a configuration bug which was